# tpRigToolkit-tools-namemanager

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py
tests/: test_general.py
tpRigToolkit/tools/namemanager/: __logging__.ini  __version__.py
tpRigToolkit/tools/namemanager/core/: namemanager.py
tpRigToolkit/tools/namemanager/widgets/: namemanager.py
