[metadata]
name = tpRigToolkit-tools-namemanager
description = Tool to manage the nomenclature of tpRigToolkit projects and data
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.tools.namemanager.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-namemanager

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    lucidity
    tpRigToolkit-core
    tpDcc-libs-nameit
    tpDcc-tools-nameit

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1